--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "ci-test": "CI=true npm run test -- --coverage",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
